--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -428,10 +428,11 @@ jobs:
       name: TDD
     
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
       
       - name: Setup .NET SDK 10.0.100
-        uses: actions/setup-dotnet@v4
+        uses: actions/setup-dotnet@v5
         with:
           dotnet-version: '10.0.100'
       
@@ -555,75 +556,116 @@ jobs:
           $expectedBrowsersPath = Join-Path $env:GITHUB_WORKSPACE ".playwright"
           Write-Host "Expected browsers path: $expectedBrowsersPath"
           
-          # Find the playwright.ps1 script in the extracted package
-          # This script will install both browsers AND the Node.js driver
-          $playwrightScript = Get-ChildItem -Path ./acceptance-tests-package -Recurse -Filter "playwright.ps1" | Select-Object -First 1
+          # Step 1: Install browsers via npm (this works reliably)
+          Write-Host "Step 1: Installing Playwright browsers via npm..."
+          npm install -g playwright@1.54.0
           
-          if (-not $playwrightScript) {
-            Write-Error "playwright.ps1 script not found in extracted package"
-            Write-Host "Searching for any .ps1 files:"
-            Get-ChildItem -Path ./acceptance-tests-package -Recurse -Filter "*.ps1" | Select-Object FullName
-            exit 1
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "Failed to install Playwright npm package"
+            exit $LASTEXITCODE
           }
           
-          Write-Host "Found playwright.ps1 script: $($playwrightScript.FullName)"
-          $scriptDir = Split-Path -Parent $playwrightScript.FullName
+          playwright install --with-deps
           
-          # Set PLAYWRIGHT_BROWSERS_PATH so the script installs to the expected location
-          $env:PLAYWRIGHT_BROWSERS_PATH = $expectedBrowsersPath
-          Write-Host "Setting PLAYWRIGHT_BROWSERS_PATH to: $expectedBrowsersPath"
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "Failed to install Playwright browsers"
+            exit $LASTEXITCODE
+          }
           
-          # Change to the script directory and run install
-          # The script needs to be run from its directory to find the required assets
-          Push-Location $scriptDir
-          try {
-            Write-Host "Running playwright install from: $scriptDir"
-            Write-Host "Working directory: $(Get-Location)"
+          # Step 2: Copy browsers from npm location to expected location
+          $npmBrowsersPath = Join-Path $env:LOCALAPPDATA "ms-playwright"
+          Write-Host "Step 2: Copying browsers from npm location to expected location..."
+          
+          if (Test-Path $expectedBrowsersPath) {
+            Remove-Item -Path $expectedBrowsersPath -Recurse -Force -ErrorAction SilentlyContinue
+          }
+          
+          robocopy "$npmBrowsersPath" "$expectedBrowsersPath" /E /NFL /NDL /NJH /NJS 2>&1 | Out-Null
+          if ($LASTEXITCODE -ge 8) {
+            Copy-Item -Path $npmBrowsersPath -Destination $expectedBrowsersPath -Recurse -Force
+          }
+          
+          Write-Host "✓ Browsers copied to expected location"
+          
+          # Step 3: Install the Node.js driver that .NET Playwright needs
+          # The driver is typically embedded in the Microsoft.Playwright package
+          # We need to extract it or download it
+          Write-Host "Step 3: Installing Playwright Node.js driver..."
+          
+          $driverPath = Join-Path $expectedBrowsersPath "node" "win32_x64"
+          $nodeExe = Join-Path $driverPath "node.exe"
+          
+          # Create the directory structure
+          New-Item -ItemType Directory -Path $driverPath -Force | Out-Null
+          
+          # Try to use dotnet to run the Playwright install command
+          # Find the Microsoft.Playwright.dll
+          $playwrightDll = Get-ChildItem -Path ./acceptance-tests-package -Recurse -Filter "Microsoft.Playwright.dll" | Select-Object -First 1
+          
+          if ($playwrightDll) {
+            Write-Host "Found Microsoft.Playwright.dll: $($playwrightDll.FullName)"
+            $dllDir = Split-Path -Parent $playwrightDll.FullName
             
-            # The script may need the Microsoft.Playwright.dll in the same directory
-            # Check if it's there
-            $playwrightDll = Join-Path $scriptDir "Microsoft.Playwright.dll"
-            if (Test-Path $playwrightDll) {
-              Write-Host "✓ Microsoft.Playwright.dll found in script directory"
-            } else {
-              Write-Warning "Microsoft.Playwright.dll not in script directory, searching..."
-              $foundDll = Get-ChildItem -Path $scriptDir -Recurse -Filter "Microsoft.Playwright.dll" | Select-Object -First 1
-              if ($foundDll) {
-                Write-Host "Found DLL at: $($foundDll.FullName)"
+            # Try to use the DLL to install the driver
+            # The .NET Playwright package has a method to install the driver
+            Push-Location $dllDir
+            try {
+              # Try using dotnet exec with the DLL to install driver
+              # This might work if the DLL has the install functionality
+              Write-Host "Attempting to install driver using Microsoft.Playwright.dll..."
+              
+              # The driver URL is typically: https://playwright.azureedge.net/builds/driver/...
+              # But we need the exact version. Let's try downloading from the known location
+              $playwrightVersion = "1.54.0"
+              $driverUrl = "https://playwright.azureedge.net/builds/driver/playwright-${playwrightVersion}-win32_x64.zip"
+              
+              Write-Host "Downloading driver from: $driverUrl"
+              $driverZip = Join-Path $env:TEMP "playwright-driver.zip"
+              
+              try {
+                Invoke-WebRequest -Uri $driverUrl -OutFile $driverZip -UseBasicParsing -ErrorAction Stop
+                
+                Write-Host "Extracting driver..."
+                $tempExtract = Join-Path $env:TEMP "playwright-driver-extract"
+                if (Test-Path $tempExtract) {
+                  Remove-Item -Path $tempExtract -Recurse -Force
+                }
+                Expand-Archive -Path $driverZip -DestinationPath $tempExtract -Force
+                
+                # Find node.exe in the extracted files
+                $extractedNode = Get-ChildItem -Path $tempExtract -Recurse -Filter "node.exe" | Select-Object -First 1
+                if ($extractedNode) {
+                  Copy-Item -Path $extractedNode.FullName -Destination $nodeExe -Force
+                  Write-Host "✓ Driver installed successfully"
+                } else {
+                  Write-Warning "node.exe not found in extracted driver zip"
+                }
+                
+                # Cleanup
+                Remove-Item -Path $tempExtract -Recurse -Force -ErrorAction SilentlyContinue
+                Remove-Item -Path $driverZip -Force -ErrorAction SilentlyContinue
+              } catch {
+                Write-Warning "Failed to download driver: $_"
+                Write-Host "Driver installation will be skipped - tests may fail"
               }
+            } finally {
+              Pop-Location
             }
-            
-            # Run the install script
-            & pwsh -File ./playwright.ps1 install --with-deps
-            
-            if ($LASTEXITCODE -ne 0) {
-              Write-Error "playwright.ps1 install failed with exit code: $LASTEXITCODE"
-              Write-Host "Trying to get more information..."
-              & pwsh -File ./playwright.ps1 install --with-deps 2>&1 | Write-Host
-              exit $LASTEXITCODE
-            }
-            
-            Write-Host "✓ Playwright install script completed successfully"
-          } finally {
-            Pop-Location
+          } else {
+            Write-Warning "Microsoft.Playwright.dll not found - cannot install driver"
           }
           
           # Verify installation
-          $nodeExe = Join-Path $expectedBrowsersPath "node" "win32_x64" "node.exe"
           Write-Host "Verifying installation..."
-          Write-Host "Looking for node.exe at: $nodeExe"
-          
           if (Test-Path $nodeExe) {
-            Write-Host "✓ Playwright driver (node.exe) found at expected location"
+            Write-Host "✓ Playwright driver (node.exe) found at: $nodeExe"
           } else {
-            Write-Warning "node.exe not found at expected path. Checking .playwright directory..."
-            if (Test-Path $expectedBrowsersPath) {
-              Write-Host "Contents of .playwright:"
-              Get-ChildItem -Path $expectedBrowsersPath -Recurse | Select-Object FullName | Select-Object -First 20
-            } else {
-              Write-Error ".playwright directory was not created"
-              exit 1
+            Write-Error "Failed to install Playwright driver. node.exe not found at: $nodeExe"
+            Write-Host "Driver directory contents:"
+            if (Test-Path $driverPath) {
+              Get-ChildItem -Path $driverPath -Recurse | Select-Object FullName
             }
+            exit 1
           }
           
           # Set environment variable
