--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -581,37 +581,38 @@ jobs:
           "PLAYWRIGHT_BROWSERS_PATH=$expectedBrowsersPath" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
           
           Write-Host "Playwright browsers and driver installed successfully"
-      - name: Run acceptance tests
-        shell: pwsh
-        env:
-          ApplicationBaseUrl: ${{ env.CONTAINER_APP_URL }}
-          ConnectionStrings__SqlConnectionString: ${{ env.CONTAINER_APP_CONNECTION_STRING }}
-          StartLocalServer: "false"
-        run: |
-          Write-Host "Running acceptance tests..."
-          Write-Host "ApplicationBaseUrl: $env:ApplicationBaseUrl"
-          Write-Host "ConnectionStrings__SqlConnectionString: $([string]::IsNullOrWhiteSpace($env:ConnectionStrings__SqlConnectionString))"
-          Write-Host "StartLocalServer: $env:StartLocalServer"
-          
-          # Find the test DLL
-          $testDll = Get-ChildItem -Path ./acceptance-tests-package -Recurse -Filter "*AcceptanceTests*.dll" | 
-            Where-Object { $_.Name -notlike "*TestAdapter*" -and $_.Name -notlike "*TestHost*" } | 
-            Select-Object -First 1
-          
-          if (-not $testDll) {
-            Write-Error "Test DLL not found in acceptance-tests-package"
-            exit 1
-          }
 
-          dotnet test $($testDll.FullName) `
-            /Logger:trx;LogFileName=AcceptanceTests-TDD.trx `
-            /ResultsDirectory:./TestResults `
-            /Parallel
-          if ($LASTEXITCODE -ne 0) {
-            Write-Error "Failed to run acceptance tests"
-            exit $LASTEXITCODE
-          }
-          Write-Host "Acceptance tests completed successfully"
+      # - name: Run acceptance tests
+      #   shell: pwsh
+      #   env:
+      #     ApplicationBaseUrl: ${{ env.CONTAINER_APP_URL }}
+      #     ConnectionStrings__SqlConnectionString: ${{ env.CONTAINER_APP_CONNECTION_STRING }}
+      #     StartLocalServer: "false"
+      #   run: |
+      #     Write-Host "Running acceptance tests..."
+      #     Write-Host "ApplicationBaseUrl: $env:ApplicationBaseUrl"
+      #     Write-Host "ConnectionStrings__SqlConnectionString: $([string]::IsNullOrWhiteSpace($env:ConnectionStrings__SqlConnectionString))"
+      #     Write-Host "StartLocalServer: $env:StartLocalServer"
+          
+      #     # Find the test DLL
+      #     $testDll = Get-ChildItem -Path ./acceptance-tests-package -Recurse -Filter "*AcceptanceTests*.dll" | 
+      #       Where-Object { $_.Name -notlike "*TestAdapter*" -and $_.Name -notlike "*TestHost*" } | 
+      #       Select-Object -First 1
+          
+      #     if (-not $testDll) {
+      #       Write-Error "Test DLL not found in acceptance-tests-package"
+      #       exit 1
+      #     }
+
+      #     dotnet test $($testDll.FullName) `
+      #       /Logger:trx;LogFileName=AcceptanceTests-TDD.trx `
+      #       /ResultsDirectory:./TestResults `
+      #       /Parallel
+      #     if ($LASTEXITCODE -ne 0) {
+      #       Write-Error "Failed to run acceptance tests"
+      #       exit $LASTEXITCODE
+      #     }
+      #     Write-Host "Acceptance tests completed successfully"
 
       # - name: Run acceptance tests the hard way
       #   id: run-acceptance-tests-the-hard-way
@@ -815,20 +816,20 @@ jobs:
       #       exit $LASTEXITCODE
       #     }          
 
-      # - name: Run acceptance tests
-      #   uses: josepho0918/vstest-action@main
-      #   env:
-      #     ApplicationBaseUrl: ${{ env.CONTAINER_APP_URL }}
-      #     ConnectionStrings__SqlConnectionString: ${{ env.CONTAINER_APP_CONNECTION_STRING }}
-      #     StartLocalServer: "false"
-      #     PLAYWRIGHT_BROWSERS_PATH: ${{ env.PLAYWRIGHT_BROWSERS_PATH }}
-      #   with:
-      #     testAssembly: |
-      #       **\*AcceptanceTests.dll
-      #       !**\*TestAdapter.dll
-      #       !**\obj\**
-      #     searchFolder: ./acceptance-tests-package/
-      #     runInParallel: true
+      - name: Run acceptance tests
+        uses: josepho0918/vstest-action@main
+        env:
+          ApplicationBaseUrl: ${{ env.CONTAINER_APP_URL }}
+          ConnectionStrings__SqlConnectionString: ${{ env.CONTAINER_APP_CONNECTION_STRING }}
+          StartLocalServer: "false"
+          PLAYWRIGHT_BROWSERS_PATH: ${{ env.PLAYWRIGHT_BROWSERS_PATH }}
+        with:
+          testAssembly: |
+            **\*AcceptanceTests.dll
+            !**\*TestAdapter.dll
+            !**\obj\**
+          searchFolder: ./acceptance-tests-package/
+          runInParallel: true
 
       - name: Upload Acceptance Test Results
         uses: actions/upload-artifact@v4
