run acceptance tests

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -536,11 +536,11 @@ jobs:
           try {
             . ./build.ps1
 
-            dotnet build src/ChurchBulletin.sln --configuration Release
+            dotnet build ChurchBulletin.sln --configuration Release
             
             # Restore and build acceptance tests to ensure Playwright is ready
-            dotnet restore src/AcceptanceTests/AcceptanceTests.csproj
-            dotnet build src/AcceptanceTests/AcceptanceTests.csproj --configuration Release
+            dotnet restore AcceptanceTests/AcceptanceTests.csproj
+            dotnet build AcceptanceTests/AcceptanceTests.csproj --configuration Release
             
             # Now run the acceptance tests
             AcceptanceTests
