run acceptance tests

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -527,10 +527,11 @@ jobs:
           ApplicationBaseUrl: ${{ env.CONTAINER_APP_URL }}
           BUILD_BUILDNUMBER: ${{ env.VERSION }}
           BuildConfiguration: Release
+          StartLocalServer: "false"
 
         run: |
          
-          . ./build.ps1
+          $verbosity = "minimal"
 
           dotnet build src/ChurchBulletin.sln --configuration Release
           
@@ -538,8 +539,20 @@ jobs:
           dotnet restore src/AcceptanceTests/AcceptanceTests.csproj
           dotnet build src/AcceptanceTests/AcceptanceTests.csproj --configuration Release
           
+          $base_dir = resolve-path .\
+          $source_dir = Join-Path $base_dir "src"
+          $acceptanceTestProjectPath = Join-Path $source_dir "AcceptanceTests"
+          $runSettingsPath = Join-Path $acceptanceTestProjectPath "AcceptanceTests.runsettings"
+          $resultsDirectory = Join-Path $base_dir "build/test/AcceptanceTests"
+          $test_dir = Join-Path (Join-Path $base_dir "build") "test"
+
           # Now run the acceptance tests
-          AcceptanceTests
+          Write-Host "Running acceptance tests on TDD at ${{ env.CONTAINER_APP_URL }}, settings file: $runSettingsPath"
+          & dotnet test /p:CopyLocalLockFileAssemblies=true /p:CollectCoverage=true -nologo -v $verbosity --logger:trx `
+              --results-directory $(Join-Path $test_dir "AcceptanceTests") --no-build `
+              --no-restore --configuration ${{ env.BuildConfiguration }} `
+              --settings:$runSettingsPath `
+              --collect:"XPlat Code Coverage"
 
       - name: Upload Acceptance Test Results
         uses: actions/upload-artifact@v4
