--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -529,6 +529,7 @@ jobs:
 
         run: |
          
+          . .\build.ps1
           $verbosity = "normal"
           $base_dir = resolve-path .\
           $source_dir = Join-Path $base_dir "src"
@@ -538,6 +539,7 @@ jobs:
           $runSettingsPath = Join-Path $acceptanceTestProjectPath "AcceptanceTests.runsettings"
           $resultsDirectory = Join-Path $test_dir "AcceptanceTests"
 
+
           # Build the solution first (since AcceptanceTests uses --no-build)
           dotnet build src/ChurchBulletin.sln --configuration ${{ env.BuildConfiguration }}
     
@@ -545,6 +547,10 @@ jobs:
           dotnet restore src/AcceptanceTests/AcceptanceTests.csproj
           dotnet build src/AcceptanceTests/AcceptanceTests.csproj --configuration ${{ env.BuildConfiguration }}
 
+
+          $playwrightScript= Join-PathSegments "bin" "Release" "10.0" "playwright.ps1"
+
+          $playwrightScript install --with-deps
           # Now run the acceptance tests
           Write-Host "Running acceptance tests on TDD at ${{ env.ApplicationBaseUrl }}, settings file: $runSettingsPath"
           dotnet test $acceptanceTestProject /p:CopyLocalLockFileAssemblies=true /p:CollectCoverage=true --nologo `
