--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -547,10 +547,25 @@ jobs:
           dotnet restore src/AcceptanceTests/AcceptanceTests.csproj
           dotnet build src/AcceptanceTests/AcceptanceTests.csproj --configuration ${{ env.BuildConfiguration }}
 
+          Push-Location -Path $acceptanceTestProjectPath
+          try {
+              $playwrightScript = Join-PathSegments "bin" "Release" "net10.0" "playwright.ps1"
+              
+              if (Test-Path $playwrightScript) {
+                  Write-Host "Installing Playwright browsers from $playwrightScript"
+                  & pwsh $playwrightScript install --with-deps
+                  if ($LASTEXITCODE -ne 0) {
+                      throw "Failed to install Playwright browsers"
+                  }
+              } else {
+                  Write-Warning "Playwright script not found at $playwrightScript"
+              }
+          } finally {
+              Pop-Location
+          }
 
-          $playwrightScript= Join-PathSegments "bin" "Release" "10.0" "playwright.ps1"
-
-          $playwrightScript install --with-deps
+          Write-Host "Installing Playwright browsers from $playwrightScript"
+          & pwsh $playwrightScript install --with-deps
           # Now run the acceptance tests
           Write-Host "Running acceptance tests on TDD at ${{ env.ApplicationBaseUrl }}, settings file: $runSettingsPath"
           dotnet test $acceptanceTestProject /p:CopyLocalLockFileAssemblies=true /p:CollectCoverage=true --nologo `
