--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -552,6 +552,8 @@ jobs:
               $playwrightScript = Join-PathSegments "bin" "Release" "net10.0" "playwright.ps1"
               
               if (Test-Path $playwrightScript) {
+                  # Resolve to absolute path
+                  $playwrightScript = Resolve-Path $playwrightScript
                   Write-Host "Installing Playwright browsers from $playwrightScript"
                   & pwsh $playwrightScript install --with-deps
                   if ($LASTEXITCODE -ne 0) {
