--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -568,7 +568,7 @@ jobs:
           $env:ConnectionStrings__SqlConnectionString = "${{ env.CONTAINER_APP_CONNECTION_STRING }}"
           $env:ApplicationBaseUrl = "${{ env.CONTAINER_APP_URL }}"
           $env:StartLocalServer = "false"
-          $env:TEST_INPUT_DELAY_MS = "1000"
+          $env:TEST_INPUT_DELAY_MS = ""
           dotnet test $acceptanceTestProject /p:CopyLocalLockFileAssemblies=true /p:CollectCoverage=true --nologo `
             --no-restore --logger:trx --results-directory $resultsDirectory --no-build `
             -v $verbosity --configuration ${{ env.BuildConfiguration }} --settings:$runSettingsPath `
@@ -586,6 +586,7 @@ jobs:
   deploy-to-uat:
     name: UAT
     needs: [deploy-to-tdd]
+    if: success() 
     runs-on: ubuntu-latest
     environment:
       name: UAT
@@ -624,6 +625,7 @@ jobs:
   deploy-to-prod:
     name: Prod
     needs: [deploy-to-uat]
+    if: success() 
     runs-on: ubuntu-latest
     environment:
       name: Prod
